Fix flip-card responsiveness on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -515,7 +515,7 @@ background-color:rgb(0, 0, 0,0.1) ;
  
 .flip-card {
       perspective: 1000px;
-      height: 100%;
+      height: 40vh;
       min-height: 300px ;
       margin-top: 50px;
 }
